--- a/WebApplication3/Views/Category/Index.cshtml
+++ b/WebApplication3/Views/Category/Index.cshtml
@@ -9,7 +9,7 @@
             <h2 class="text-primary">CATEGORY LIST</h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="" asp-action="" class="btn btn-primary"><i class="bi bi-file-earmark-plus-fill"></i> Create New Category</a>
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary"><i class="bi bi-file-earmark-plus-fill"></i> Create New Category</a>
         </div>
     </div>
     <table class="table table-bordered table-striped">
