--- a/WebApplication3/Views/Category/Index.cshtml
+++ b/WebApplication3/Views/Category/Index.cshtml
@@ -3,7 +3,9 @@
 }
 @model List<Category>
 
+
 <div class="container">
+    <partial name="_Notification" />
     <div class="row pt-4 pb-3">
         <div class="col-6">
             <h2 class="text-primary">CATEGORY LIST</h2>
@@ -17,6 +19,8 @@
             <tr>
                 <th>Category Name</th>
                 <th>Display Order</th>
+                <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -25,6 +29,15 @@
                 <tr>
                     <td>@i.Name</td>
                     <td>@i.DisplayOrder</td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@i.Id" class="btn btn-primary mx-2"><i class="bi bi-pen"></i> Edit</a>
+                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@i.Id" class="btn btn-danger mx-2">
+                                <i class="bi bi-trash3-fill"></i> Delete
+
+                            </a>
+                        </div>
+                    </td>
                 </tr>
             }
         </tbody>
