--- a/WebApplication3/Views/Category/Index.cshtml
+++ b/WebApplication3/Views/Category/Index.cshtml
@@ -3,43 +3,51 @@
 }
 @model List<Category>
 
-
-<div class="container">
-    <partial name="_Notification" />
-    <div class="row pt-4 pb-3">
-        <div class="col-6">
-            <h2 class="text-primary">CATEGORY LIST</h2>
-        </div>
-        <div class="col-6 text-end">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary"><i class="bi bi-file-earmark-plus-fill"></i> Create New Category</a>
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">CATEGORY LIST</h2>
+            </div>
         </div>
     </div>
-    <table class="table table-bordered table-striped">
-        <thead>
-            <tr>
-                <th>Category Name</th>
-                <th>Display Order</th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (Category i in Model.OrderBy(u => u.DisplayOrder))
-            {
+    <div class="card-body p-4">
+        <partial name="_Notification" />
+        <div class="row pb-3">
+            <div class="col-6">
+            </div>
+            <div class="col-6 text-end">
+                <a asp-controller="Category" asp-action="Create" class="btn btn-primary"><i class="bi bi-file-earmark-plus-fill"></i> Create New Category</a>
+            </div>
+        </div>
+        <table class="table table-bordered table-striped">
+            <thead>
                 <tr>
-                    <td>@i.Name</td>
-                    <td>@i.DisplayOrder</td>
-                    <td>
-                        <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@i.Id" class="btn btn-primary mx-2"><i class="bi bi-pen"></i> Edit</a>
-                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@i.Id" class="btn btn-danger mx-2">
-                                <i class="bi bi-trash3-fill"></i> Delete
-
-                            </a>
-                        </div>
-                    </td>
+                    <th>Category Name</th>
+                    <th>Display Order</th>
+                    <th></th>
+                    <th></th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (Category i in Model.OrderBy(u => u.DisplayOrder))
+                {
+                    <tr>
+                        <td>@i.Name</td>
+                        <td>@i.DisplayOrder</td>
+                        <td>
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="Category" asp-action="Edit" asp-route-id="@i.Id" class="btn btn-primary mx-2"><i class="bi bi-pen"></i> Edit</a>
+                                <a asp-controller="Category" asp-action="Delete" asp-route-id="@i.Id" class="btn btn-danger mx-2">
+                                    <i class="bi bi-trash3-fill"></i> Delete
+
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
+   
